wip: bumping embassy deps and remove eusb v0.3 and v0.4 support.

--- a/example/esp32c6-serial/Cargo.toml
+++ b/example/esp32c6-serial/Cargo.toml
@@ -1,36 +1,33 @@
 [package]
-name    = "esp32c6-serial"
+name = "esp32c6-serial"
 edition = "2024"
 version = "0.1.0"
 
 [dependencies]
 critical-section = "1.2"
 defmt = "1"
-embassy-executor = { version = "0.7.0", features = [
-  "defmt",
-  "task-arena-size-20480",
-] }
+embassy-executor = { version = "0.9", features = ["defmt"] }
 embassy-sync = { version = "0.7", features = ["defmt"] }
-embassy-time = "0.4.0"
+embassy-time = "0.5"
 esp-hal = { version = "1.0.0-rc.0", features = [
   "defmt",
   "esp32c6",
   "unstable",
 ] }
-esp-bootloader-esp-idf = { version = "0.2", features = [ "esp32c6" ] }
+esp-bootloader-esp-idf = { version = "0.2", features = ["esp32c6"] }
 esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community", rev = "20badf1b03727153074fd647b5a3c2a26310ad3e" }
-esp-hal-embassy  = { version = "0.9.0", features = ["esp32c6"] }
+esp-hal-embassy = { version = "0.9.0", features = ["esp32c6"] }
 panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
-rtt-target       = { version = "0.6.1", features = ["defmt"] }
-static_cell      = { version = "2.1.1" }
-serde            = { version = "1.0", default-features = false }
-smart-leds       = "0.4.0"
+rtt-target = { version = "0.6.1", features = ["defmt"] }
+static_cell = { version = "2.1.1" }
+serde = { version = "1.0", default-features = false }
+smart-leds = "0.4.0"
 
-postcard                = { version = "1" }
-postcard-rpc            = { version = "0.11", features = ["embedded-io-async-0_6-server"] }
-postcard-schema         = { version = "0.2.0", features = ["derive"] }
+postcard = { version = "1" }
+postcard-rpc = { version = "0.11", features = ["embedded-io-async-0_6-server"] }
+postcard-schema = { version = "0.2.0", features = ["derive"] }
 
-workbook-icd            = { path = "../workbook-icd" }
+workbook-icd = { path = "../workbook-icd" }
 
 [patch.crates-io]
 postcard-rpc = { path = "../../source/postcard-rpc" }
@@ -41,10 +38,10 @@ postcard-rpc = { path = "../../source/postcard-rpc" }
 opt-level = "s"
 
 [profile.release]
-codegen-units    = 1     # LLVM can perform better optimizations using a single thread
-debug            = 2
+codegen-units = 1        # LLVM can perform better optimizations using a single thread
+debug = 2
 debug-assertions = false
-incremental      = false
-lto              = 'fat'
-opt-level        = 's'
-overflow-checks  = false
+incremental = false
+lto = 'fat'
+opt-level = 's'
+overflow-checks = false
